--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,7 @@
 <h1> first sample file</h1>
-<<<<<<< HEAD
 <h2> updated in master branch </h2>
-=======
 <h2> updated in branch b1</h2>
->>>>>>> b1
 <h3> updated in branch b2</h3>
+<h4>updated for feature15 </h4>
+<h5> updated for feature15</h5>
 
