updated file 1 again

--- a/index1.html
+++ b/index1.html
@@ -5,3 +5,4 @@
 <h4>updated for feature15 </h4>
 <h5> updated for feature15</h5>
 <h6> updated feature change3 </h6>
+<h7> updated a another feature</h7>
